--- a/index.html
+++ b/index.html
@@ -248,8 +248,9 @@
 								<h2>About Us</h2>
 							</div>
 							<div class="ori-feature-text-area-4 pera-content wow fadeInUp" data-wow-delay="300ms" data-wow-duration="1000ms">
-								<p>Welcome to Uniedge Marketing & Co., where digital marketing excellence meets brand growth. Our mission is simple yet ambitious: to harness the power of SEO, content marketing, social media, email marketing, branding, and web development to propel brands into a future of increased visibility, engagement, and success. Built on the pillars of integrity, creativity, and precision, our strategies are custom-crafted to exceed the unique needs and objectives of each client, ensuring standout results in the ever-evolving digital landscape.</p>
-								<p>Our dedicated team of marketing professionals views each challenge as an opportunity to innovate and excel. By fostering a culture of continuous learning and adaptation, we guarantee that our clients’ brands not only navigate the complexities of the digital age but lead the charge. As we look forward to embracing new technologies and discovering fresh strategies, we invite you to join us on this journey of growth and transformation. Together, let’s turn your brand's vision into reality and achieve new heights of success.</p>
+								<p>Welcome to Uniedge Marketing & Co.<br>
+									Where digital marketing excellence meets brand growth. Our mission is simple yet ambitious: to harness the power of SEO, content marketing, social media, email marketing, branding, and web development to propel brands into a future of increased visibility, engagement, and success. Built on the pillars of integrity, creativity, and precision, our strategies are custom-crafted to exceed the unique needs and objectives of each client, ensuring standout results in the ever-evolving digital landscape.</p>
+								<p>Our dedicated team of marketing professionals views each challenge as an opportunity to innovate and excel. By fostering a culture of continuous learning and adaptation, we guarantee that our clients’ brands not only navigate the complexities of the digital age but lead the charge. As we look forward to embracing new technologies and discovering fresh strategies, we invite you to join us on this journey of growth and transformation.</p>
 								<div class="ori-btn-2 text-uppercase">
 									<a href="about.html">discover more</a>
 								</div>
@@ -709,7 +710,7 @@
 				<div class="ori-seven-contact-form position-relative">
 					<div class="ori-seven-section-title text-center middle-align headline pera-content">
 						<h2>Contact us</h2>
-						<p>We work with ambitious leaders who want to define the future, <br>not hide from it.</p>
+						<p>Reach out today and let's shape your brand's success together</p>
 					</div>
 					<div class="ori-seven-contact-form-wrap headline pera-content">
 						
