--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 							</div>
 							<div class="ori-feature-text-area-4 pera-content wow fadeInUp" data-wow-delay="300ms" data-wow-duration="1000ms">
 								<p>Welcome to Uniedge Marketing & Co.<br>
-									Where digital marketing excellence meets brand growth. Our mission is simple yet ambitious: to harness the power of SEO, content marketing, social media, email marketing, branding, and web development to propel brands into a future of increased visibility, engagement, and success. Built on the pillars of integrity, creativity, and precision, our strategies are custom-crafted to exceed the unique needs and objectives of each client, ensuring standout results in the ever-evolving digital landscape.</p>
+									Where digital marketing excellence meets brand growth. Our mission is to harness the power of SEO, content marketing, social media, email marketing, branding, and web development to propel brands into a future of increased visibility, engagement, and success. Built on the pillars of integrity, creativity, and precision, our strategies are custom-crafted to exceed the unique needs and objectives of each client, ensuring standout results in the ever-evolving digital landscape.</p>
 								<p>Our dedicated team of marketing professionals views each challenge as an opportunity to innovate and excel. By fostering a culture of continuous learning and adaptation, we guarantee that our clients’ brands not only navigate the complexities of the digital age but lead the charge. As we look forward to embracing new technologies and discovering fresh strategies, we invite you to join us on this journey of growth and transformation.</p>
 								<div class="ori-btn-2 text-uppercase">
 									<a href="about.html">discover more</a>
