--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
 						</div>
 						<div class="ori-seven-contact-info-item headline pera-content">
 							<h3>Email Address:</h3>
-							<p>akankshamotewarupgrad@gmail.com</p>
+							<p>akankshamotewar@uniedgemarketing.com</p>
 							
 						</div>
 					</div>
@@ -804,7 +804,7 @@
 								<div class="contact-info">
 									<span>Hubtown Solaris, 1049 Opp, Teli Gali, Vijay Nagar, Andheri East, Mumbai, Maharashtra- 400053 </span>
 									<span>(+91)8355927245</span>
-									<a href="#">akankshamotewarupgrad@gmail.com</a>
+									<a href="#">akankshamotewar@uniedgemarketing.com</a>
 									<span>Office Hours: 8AM - 11PM</span>
 									
 								</div>
