--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<div class="ori-header-content-area">
 			<div class="ori-header-content d-flex align-items-center justify-content-between">
 				<div class="brand-logo">
-					<a href="#"><img src="assets/img/logo/logo3 (2).png" alt=""></a>
+					<a href="#"><img src="assets/img/logo/logo3 (2).png" alt="logo"></a>
 				</div>
 				<div class="ori-main-navigation-area">
 					<nav class="ori-main-navigation clearfix ul-li">
@@ -582,7 +582,7 @@
 					<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="400ms" data-wow-duration="1000ms">
 						<div class="ori-service-item-4">
 							<div class="ori-service-icon d-flex justify-content-center align-items-center">
-								<img src="assets/img/icon/ic9.png" alt="">
+								<img src="assets/img/icon/ic9.png" alt="Web ICON">
 							</div>
 							<div class="ori-service-text pera-content">
 								<h3><a href="service-single.html">Web Development & Management</a></h3>
